--- a/src/main/resources/templates/client/client-page.html
+++ b/src/main/resources/templates/client/client-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy">
     <div th:insert="~{fragment/header :: header}"></div>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
@@ -17,22 +17,27 @@
     <div th:insert="~{fragment/toolbar :: toolbar}"></div>
 
 
-
     <section class="cta-section theme-bg-light py-5">
         <div class="container single-col-max-width">
             <h2 class="heading text-center" th:text="|${simpleClient.nickname} 님의 서비스 목록|">나의 서비스 목록</h2>
             <div class="intro"></div>
             <div class="single-form-max-width text-center pt-3 mx-auto">
-                <form  th:action  method="get">
+                <form method="get" th:action>
                     <div class="form-floating  mb-3 col-12">
-                        <input type="text" class="form-control" id="serviceName" name="serviceName" placeholder="서비스 이름으로 검색">
+                        <input class="form-control" id="serviceName" name="serviceName" placeholder="서비스 이름으로 검색"
+                               type="text">
                         <label for="serviceName"> &nbsp &nbsp 서비스 이름으로 검색</label>
                         <label for="serviceName"></label>
                     </div>
                     <hr>
-                    <button type="submit" class="btn btn-primary">검색</button>
+                    <button class="btn btn-primary" type="submit">검색</button>
                 </form>
-                <div class="text-end"><button class="btn btn-primary" th:onclick="|location.href='@{/client/{clientId} (clientId=${simpleClient.clientId})}'|">전체 검색</button></div>
+                <div class="text-end">
+                    <button class="btn btn-primary"
+                            th:onclick="|location.href='@{/client/{clientId} (clientId=${simpleClient.clientId})}'|">전체
+                        검색
+                    </button>
+                </div>
             </div><!--//single-form-max-width-->
         </div><!--//container-->
     </section>
@@ -40,21 +45,28 @@
     <section class="projects-list px-3 py-5 p-md-5">
         <div class="container">
             <div class="text-center">
-                <ul id="filters" class="filters mb-5 mx-auto   ps-0">
+                <ul class="filters mb-5 mx-auto   ps-0" id="filters">
                     <li class="type active mb-3 mb-lg-0" data-filter="*">All</li>
-                    <li class="type  mb-3 mb-lg-0"  th:attr="data-filter='.' + ${category}" th:each="category : ${allCategories}" th:text="${category}">We App</li>
+                    <li class="type  mb-3 mb-lg-0" th:attr="data-filter='.' + ${category}"
+                        th:each="category : ${allCategories}" th:text="${category}">We App
+                    </li>
                 </ul><!--//filters-->
             </div>
 
             <div class="project-meta isotope row" style="display: flex; flex-wrap: wrap">
-                <div class="isotope-item col-md-6 mb-5" style="width: 10%;justify-content: center"  th:classappend="${service.getCategories()}" th:each="service : ${serviceWithClick}">
-                        <div class="card" style="width: 60%; height: 100%;border: none;justify-content: center">
-                                <a class="card-link" style="display: block" th:href="@{/client/click/(serviceId=${service.serviceId},isCustom=${service.isCustom()})}">
-                                    <img style="width: 50px; display: block" th:src="@{/file/logo/{logoStoreName} (logoStoreName=${service.logoStoreName})}" class="card-img" alt="image">
-                                </a>
-                        </div>
-                         <a class="tile" th:text="${service.serviceName}">
+                <div class="isotope-item col-md-6 mb-5" style="width: 10%;justify-content: center"
+                     th:classappend="${service.getCategories()}" th:each="service : ${serviceWithClick}">
+                    <div class="card" style="width: 60%; height: 100%;border: none;justify-content: center">
+                        <a class="card-link" style="display: block"
+                           th:href="@{/client/click/(serviceId=${service.serviceId},isCustom=${service.isCustom()})}">
+                            <img alt="image"
+                                 class="card-img"
+                                 style="width: 50px; display: block"
+                                 th:src="@{/file/logo/{logoStoreName} (logoStoreName=${service.logoStoreName})}">
                         </a>
+                    </div>
+                    <a class="tile" th:text="${service.serviceName}">
+                    </a>
                     <!--//card-->
                 </div>
             </div><!--//row-->
@@ -63,34 +75,36 @@
 
 
     <!-- Modal HTML -->
-    <div id="myModal" class="modal">
+    <div class="modal" id="myModal">
         <div class="modal-dialog-centered modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">커스텀 서비스 추가히기</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    <button class="btn-close" data-bs-dismiss="modal" type="button"></button>
                 </div>
                 <div class="modal-body">
                     <form>
                         <div class="mb-3">
-                            <label for="customServiceName" class="col-form-label">이름</label>
-                            <input type="text" class="form-control" id="customServiceName" name="customServiceName"  placeholder="serviceName" required="" aria-required="true">
+                            <label class="col-form-label" for="customServiceName">이름</label>
+                            <input aria-required="true" class="form-control" id="customServiceName"
+                                   name="customServiceName"
+                                   placeholder="serviceName" required="" type="text">
                         </div>
                         <div class="mb-3">
-                            <label for="customServiceUrl" class="col-form-label">URL</label>
-                            <input type="url" class="form-control" id="customServiceUrl" name="customServiceUrl" placeholder="URL" required="" aria-required="true" >
+                            <label class="col-form-label" for="customServiceUrl">URL</label>
+                            <input aria-required="true" class="form-control" id="customServiceUrl"
+                                   name="customServiceUrl"
+                                   placeholder="URL" required="" type="url">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
-                    <button type="button" id="ajaxCall" class="btn btn-primary">추가 하기</button>
+                    <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">취소</button>
+                    <button class="btn btn-primary" id="ajaxCall" type="button">추가 하기</button>
                 </div>
             </div>
         </div>
     </div>
-
-
 
 
     <div th:insert="~{fragment/footer :: footer}"></div>
@@ -100,11 +114,11 @@
 
 
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         $("#myModal").modal("show");
     });
 
-    window.onload = function() {
+    window.onload = function () {
         var httpRequest;
         /* button이 클릭되었을때 이벤트 */
         document.getElementById("ajaxCall").addEventListener('click', () => {
@@ -120,27 +134,26 @@
             $.ajax({
                 type: 'POST',
                 url: domain + '/client/add-custom?serviceName=' + customServiceName + '&serviceUrl=' + customServiceUrl,
-                beforeSend : function(xhr)
-                {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
+                beforeSend: function (xhr) {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
                     xhr.setRequestHeader(header, token);
                 },
                 async: false, //동기, 비동기 여부
-                cache :false, // 캐시 여부
-                success: function(data){
+                cache: false, // 캐시 여부
+                success: function (data) {
                     console.log(data.name);
-                    window.location=location.href;
+                    window.location = location.href;
                 },
-                error:function(xhr,status,error){
-                    console.log('error:'+error);
+                error: function (xhr, status, error) {
+                    console.log('error:' + error);
                 }
             });
         });
     }
 
 </script>
-<script type="text/javascript" src="/assets/plugins/imagesloaded.pkgd.min.js"></script>
-<script type="text/javascript" src="/assets/plugins/isotope.pkgd.min.js"></script>
-<script type="text/javascript" src="/assets/js/isotope-custom.js"></script>
+<script src="/assets/plugins/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+<script src="/assets/plugins/isotope.pkgd.min.js" type="text/javascript"></script>
+<script src="/assets/js/isotope-custom.js" type="text/javascript"></script>
 
 
 <div th:insert="~{fragment/library :: libraries}"></div>
