--- a/src/main/resources/templates/client/client-service-edit.html
+++ b/src/main/resources/templates/client/client-service-edit.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <div th:insert="~{fragment/header :: header}"></div>
+    <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy">
+    <div th:insert="~{fragment/header :: header}"></div>
 </head>
 <body>
 
@@ -10,52 +10,72 @@
 
 <div class="main-wrapper">
 
-  <div th:insert="~{fragment/toolbar :: toolbar}"></div>
+    <div th:insert="~{fragment/toolbar :: toolbar}"></div>
 
-  <section class="cta-section theme-bg-light py-5">
-    <div class="container single-col-max-width">
-      <h2 class="heading text-center" th:text="|${simpleClient.nickname} 님의 서비스 목록|">나의 서비스 목록</h2>
-      <div class="intro"></div>
-      <div class="single-form-max-width text-center pt-3 mx-auto">
-        <form  th:action  method="get">
-          <div class="form-floating  mb-3 col-12">
-            <input type="text" class="form-control" id="serviceName" name="serviceName" placeholder="서비스 이름으로 검색">
-            <label for="serviceName"> &nbsp &nbsp 서비스 이름으로 검색</label>
-            <label for="serviceName"></label>
-          </div>
-          <hr>
-          <button type="submit" class="btn btn-primary">검색</button>
-        </form>
-        <div class="text-end"><button class="btn btn-primary" th:onclick="|location.href='@{/client/service/edit}'|">전체 검색</button></div>
-      </div><!--//single-form-max-width-->
-    </div><!--//container-->
-  </section>
+    <section class="cta-section theme-bg-light py-5">
+        <div class="container single-col-max-width">
+            <h2 class="heading text-center" th:text="|${simpleClient.nickname} 님의 서비스 목록|">나의 서비스 목록</h2>
+            <div class="intro"></div>
+            <div class="single-form-max-width text-center pt-3 mx-auto">
+                <form method="get" th:action>
+                    <div class="form-floating  mb-3 col-12">
+                        <input class="form-control" id="serviceName" name="serviceName" placeholder="서비스 이름으로 검색"
+                               type="text">
+                        <label for="serviceName"> &nbsp &nbsp 서비스 이름으로 검색</label>
+                        <label for="serviceName"></label>
+                    </div>
+                    <hr>
+                    <button class="btn btn-primary" type="submit">검색</button>
+                </form>
+                <div class="text-end">
+                    <button class="btn btn-primary" th:onclick="|location.href='@{/client/service/edit}'|">전체 검색
+                    </button>
+                </div>
+            </div><!--//single-form-max-width-->
+        </div><!--//container-->
+    </section>
 
-  <section class="projects-list px-3 py-5 p-md-5">
-    <div class="container">
-      <div class="text-center">
-        <ul id="filters" class="filters mb-5 mx-auto   ps-0">
-          <li class="type active mb-3 mb-lg-0" data-filter="*">All</li>
-          <li class="type  mb-3 mb-lg-0"  th:attr="data-filter='.' + ${category}" th:each="category : ${allCategories}" th:text="${category}">We App</li>
-        </ul><!--//filters-->
-      </div>
+    <section class="projects-list px-3 py-5 p-md-5">
+        <div class="container">
+            <div class="text-center">
+                <ul class="filters mb-5 mx-auto   ps-0" id="filters">
+                    <li class="type active mb-3 mb-lg-0" data-filter="*">All</li>
+                    <li class="type  mb-3 mb-lg-0" th:attr="data-filter='.' + ${category}"
+                        th:each="category : ${allCategories}" th:text="${category}">We App
+                    </li>
+                </ul><!--//filters-->
+            </div>
 
-      <div class="project-meta isotope row" style="display: flex; flex-wrap: wrap">
-        <div class="isotope-item col-md-6 mb-5" style="width: 20%;justify-content: center"  th:classappend="${service.getCategories()}" th:each="service : ${serviceWithClick}">
-          <div class="card" style="width: 60%; height: 100%;border: none;justify-content: center">
-            <button th:onclick="|deleteAction('${service.serviceId}' ,'${service.isCustom}')|" style="width: 50%" class="btn btn-outline-danger">-</button>
-            <a class="card-link" style="display: block;width: 100%" th:href="@{/client/click/(serviceId=${service.serviceId})}">
-              <img style="width: 50px; display: block" th:src="@{/file/logo/{logoStoreName} (logoStoreName=${service.logoStoreName})}" class="card-img" alt="image">
-            </a>
-            <a class="tile" th:text="${service.serviceName}"  th:href="@{/service/{serviceId} (serviceId=${service.serviceId})}">
-            </a>
-          </div><!--//card-->
+            <div class="project-meta isotope row" style="display: flex; flex-wrap: wrap">
+                <div class="isotope-item col-md-6 mb-5" style="width: 20%;justify-content: center"
+                     th:classappend="${service.getCategories()}" th:each="service : ${serviceWithClick}">
+                    <div class="card" style="width: 60%; height: 100%;border: none;justify-content: center">
+                        <button class="btn btn-outline-danger"
+                                style="width: 50%"
+                                th:onclick="|deleteAction('${service.serviceId}' ,'${service.isCustom}')|">-
+                        </button>
+                        <a class="card-link" style="display: block;width: 100%"
+                           th:href="@{/client/click/(serviceId=${service.serviceId})}">
+                            <img alt="image"
+                                 class="card-img"
+                                 style="width: 50px; display: block"
+                                 th:src="@{/file/logo/{logoStoreName} (logoStoreName=${service.logoStoreName})}">
+                        </a>
+                        <a class="tile" th:href="@{/service/{serviceId} (serviceId=${service.serviceId})}"
+                           th:text="${service.serviceName}">
+                        </a>
+                    </div><!--//card-->
+                </div>
+            </div><!--//row-->
         </div>
-      </div><!--//row-->
+    </section>
+    <div class="text-center">
+        <button class="btn btn-primary"
+                th:onclick="|location.href='@{/client/{clientId} (clientId=${#authentication.getPrincipal().getId()}) }'|">
+            완료
+        </button>
     </div>
-  </section>
-  <div class="text-center"><button class="btn btn-primary" th:onclick="|location.href='@{/client/{clientId} (clientId=${#authentication.getPrincipal().getId()}) }'|">완료</button></div>
-  <div th:insert="~{fragment/footer :: footer}"></div>
+    <div th:insert="~{fragment/footer :: footer}"></div>
 
 
 </div><!--//main-wrapper-->
@@ -63,34 +83,33 @@
 <!--Page Specific JS -->
 <script type="text/javascript">
 
-  function deleteAction(serviceId,custom){
+    function deleteAction(serviceId, custom) {
 
-    var token = $("meta[name='_csrf']").attr("content");
-    var header = $("meta[name='_csrf_header']").attr("content");
+        var token = $("meta[name='_csrf']").attr("content");
+        var header = $("meta[name='_csrf_header']").attr("content");
 
-    $.ajax({
-      type: 'POST',
-      url: domain + '/client/service/delete/' + serviceId + "?isCustom=" + custom,
-      beforeSend : function(xhr)
-      {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
-        xhr.setRequestHeader(header, token);
-      },
-      async: false, //동기, 비동기 여부
-      cache :false, // 캐시 여부
-      success: function(data){
-        console.log(data.name);
-        window.location=location.href;
-      },
-      error:function(xhr,status,error){
-        console.log('error:'+error);
-      }
-    });
-  }
+        $.ajax({
+            type: 'POST',
+            url: domain + '/client/service/delete/' + serviceId + "?isCustom=" + custom,
+            beforeSend: function (xhr) {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
+                xhr.setRequestHeader(header, token);
+            },
+            async: false, //동기, 비동기 여부
+            cache: false, // 캐시 여부
+            success: function (data) {
+                console.log(data.name);
+                window.location = location.href;
+            },
+            error: function (xhr, status, error) {
+                console.log('error:' + error);
+            }
+        });
+    }
 
 </script>
-<script type="text/javascript" src="/assets/plugins/imagesloaded.pkgd.min.js"></script>
-<script type="text/javascript" src="/assets/plugins/isotope.pkgd.min.js"></script>
-<script type="text/javascript" src="/assets/js/isotope-custom.js"></script>
+<script src="/assets/plugins/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+<script src="/assets/plugins/isotope.pkgd.min.js" type="text/javascript"></script>
+<script src="/assets/js/isotope-custom.js" type="text/javascript"></script>
 
 <div th:insert="~{fragment/library :: libraries}"></div>
 
