--- a/src/main/resources/templates/service/registration.html
+++ b/src/main/resources/templates/service/registration.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy">
     <div th:insert="~{fragment/header :: header}"></div>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.css" rel="stylesheet">
 
 </head>
@@ -35,10 +35,12 @@
 
         <div class="col-6 container">
 
-            <form id="search" th:action method="get">
+            <form id="search" method="get" th:action>
                 <div class="input-group mb-auto">
-                    <input type="url" class="form-control bg-light border-0 small" id="servicesUrl"  name="serviceUrl" placeholder="URL" aria-label="URL" aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">검색</button>
+                    <input aria-describedby="button-addon2" aria-label="URL"
+                           class="form-control bg-light border-0 small" id="servicesUrl"
+                           name="serviceUrl" placeholder="URL" type="url">
+                    <button class="btn btn-outline-secondary" id="button-addon2" type="submit">검색</button>
                 </div>
             </form>
 
@@ -46,52 +48,66 @@
 
         <hr>
         <div class="container">
-            <form th:object="${serviceRegisterForm}" class="contact-form col-lg-8 mx-lg-auto" th:action method="post" enctype="multipart/form-data">
+            <form class="contact-form col-lg-8 mx-lg-auto" enctype="multipart/form-data" method="post" th:action
+                  th:object="${serviceRegisterForm}">
 
                 <div class="row g-3">
                     <div class="col-12">
                         <label class="sr-only" for="serviceName">serviceName</label>
-                        <input type="text" class="form-control" id="serviceName" name="serviceName"  th:field="*{serviceName}" placeholder="serviceName" required="" aria-required="true">
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스 이름을 입력해주세요</small>
+                        <input aria-required="true" class="form-control" id="serviceName" name="serviceName"
+                               placeholder="serviceName" required="" th:field="*{serviceName}" type="text">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스
+                            이름을 입력해주세요</small>
                         <small class="field-error" th:errors="*{serviceName}"></small>
                     </div>
 
 
-                    <div th:if="${serviceRegisterForm.logoUrl == null }" class="col-12 col-md-6">
+                    <div class="col-12 col-md-6" th:if="${serviceRegisterForm.logoUrl == null }">
                         <label class="sr-only" for="logoFile">LOGO</label>
-                        <input type="file" class="form-control" id="logoFile" name="logoFile" th:field="*{logoFile}" placeholder="LOGO"  minlength="2" required="" aria-required="true">
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스 로고를 선택해주세요</small>
+                        <input aria-required="true" class="form-control" id="logoFile" minlength="2" name="logoFile"
+                               placeholder="LOGO" required="" th:field="*{logoFile}" type="file">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스
+                            로고를 선택해주세요</small>
                         <small class="field-error" th:errors="*{logoFile}"></small>
                     </div>
 
-                    <div th:if="${serviceRegisterForm.logoUrl != null }" class="col-12 col-md-6">
+                    <div class="col-12 col-md-6" th:if="${serviceRegisterForm.logoUrl != null }">
                         <label class="sr-only" for="logoUrl">LOGO</label>
-                        <input type="url" class="form-control" id="logoUrl" name="logoUrl" th:field="*{logoUrl}" placeholder="LOGO"  minlength="2" required="" aria-required="true">
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스 로고를 선택해주세요</small>
+                        <input aria-required="true" class="form-control" id="logoUrl" minlength="2" name="logoUrl"
+                               placeholder="LOGO" required="" th:field="*{logoUrl}" type="url">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스
+                            로고를 선택해주세요</small>
                         <small class="field-error" th:errors="*{logoUrl}"></small>
                     </div>
 
 
                     <div class="col-12 col-md-6">
                         <label class="sr-only" for="servicesUrl">URL</label>
-                        <input type="url" class="form-control" id="url" name="servicesUrl" placeholder="URL" th:field="*{servicesUrl}"required="" aria-required="true" >
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스 URL을 작성해주세요</small>
+                        <input aria-required="true" class="form-control" id="url" name="servicesUrl" placeholder="URL"
+                               required="" th:field="*{servicesUrl}" type="url">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스
+                            URL을 작성해주세요</small>
                         <small class="field-error" th:errors="*{servicesUrl}"></small>
                     </div>
 
 
                     <div class="col-12 markdown-body">
                         <label class="sr-only" for="title">Title</label>
-                        <input type="text" class="form-control" id="title" name="title" placeholder="Title" th:field="*{title}" required="" aria-required="true">
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>간단한 서비스 설명해주세요</small>
+                        <input aria-required="true" class="form-control" id="title" name="title" placeholder="Title"
+                               required="" th:field="*{title}" type="text">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>간단한
+                            서비스 설명해주세요</small>
                         <small class="field-error" th:errors="*{title}"></small>
                     </div>
 
 
                     <div class="col-12">
                         <label class="sr-only" for="content">explain About Service ... </label>
-                        <textarea class="form-control" id="content" name="content" placeholder="explain About Service ... " th:field="*{content}" rows="10" required="" aria-required="true"></textarea>
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스를 설명해주세요</small>
+                        <textarea aria-required="true" class="form-control" id="content"
+                                  name="content" placeholder="explain About Service ... " required="" rows="10"
+                                  th:field="*{content}"></textarea>
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스를
+                            설명해주세요</small>
                         <small class="field-error" th:errors="*{content}"></small>
                     </div>
 
@@ -99,16 +115,19 @@
                         <script type="text/javascript">
                             $('#example-multiple-selected').multiselect();
                         </script>
-                            <div>
-                                    <label>Select category</label>
-                                    <select name="categoryNames" th:field="*{categoryNames}" multiple="" class="label ui selection fluid dropdown" required="" aria-required="true">
-                                        <option value="">카테고리 선택</option>
-                                        <option th:each="category : ${categories}"
-                                                th:value="${category}"
-                                                th:text="${category}">FAST</option>
-                                    </select>
-                            </div>
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스의 카테고리를 선택해주세요</small>
+                        <div>
+                            <label>Select category</label>
+                            <select aria-required="true" class="label ui selection fluid dropdown" multiple=""
+                                    name="categoryNames" required="" th:field="*{categoryNames}">
+                                <option value="">카테고리 선택</option>
+                                <option th:each="category : ${categories}"
+                                        th:text="${category}"
+                                        th:value="${category}">FAST
+                                </option>
+                            </select>
+                        </div>
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스의
+                            카테고리를 선택해주세요</small>
                         <small class="field-error" th:errors="*{categoryNames}"></small>
                     </div>
 
@@ -116,7 +135,7 @@
                     <br>
 
                     <div class="form-group col-12">
-                        <button type="submit"  class="btn btn-block btn-primary py-2">등록</button>
+                        <button class="btn btn-block btn-primary py-2" type="submit">등록</button>
                     </div>
 
                 </div><!--//form-row-->
