--- a/src/main/resources/templates/service/service-update.html
+++ b/src/main/resources/templates/service/service-update.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta content="upgrade-insecure-requests" http-equiv="Content-Security-Policy">
     <div th:insert="~{fragment/header :: header}"></div>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.css" rel="stylesheet">
 
 </head>
@@ -34,45 +34,58 @@
     <section class="contact-section px-3 py-5 p-md-5">
 
         <div class="container">
-            <form th:object="${serviceUpdateForm}" class="contact-form col-lg-8 mx-lg-auto" th:action method="post" enctype="multipart/form-data">
+            <form class="contact-form col-lg-8 mx-lg-auto" enctype="multipart/form-data" method="post" th:action
+                  th:object="${serviceUpdateForm}">
 
                 <div class="row g-3">
                     <div class="col-12">
                         <label class="sr-only" for="serviceName">serviceName</label>
-                        <input type="text" class="form-control" id="serviceName" name="serviceName"  th:field="*{serviceName}" placeholder="serviceName" required="" aria-required="true">
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스 이름을 입력해주세요</small>
+                        <input aria-required="true" class="form-control" id="serviceName" name="serviceName"
+                               placeholder="serviceName" required="" th:field="*{serviceName}" type="text">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스
+                            이름을 입력해주세요</small>
                         <small class="field-error" th:errors="*{serviceName}"></small>
                     </div>
 
 
                     <div class="col-12 col-md-6">
                         <label class="sr-only" for="logoFile">LOGO</label>
-                        <input type="file" class="form-control" id="logoFile" name="logoFile" th:field="*{logoFile}" placeholder="LOGO">
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스 로고를 선택해주세요</small>
+                        <input class="form-control" id="logoFile" name="logoFile" placeholder="LOGO"
+                               th:field="*{logoFile}"
+                               type="file">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스
+                            로고를 선택해주세요</small>
                         <small class="field-error" th:errors="*{logoFile}"></small>
                     </div>
 
 
                     <div class="col-12 col-md-6">
                         <label class="sr-only" for="url">URL</label>
-                        <input type="url" class="form-control" id="url" name="servicesUrl" placeholder="URL" th:field="*{serviceUrl}"required="" aria-required="true" >
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스 URL을 작성해주세요</small>
+                        <input aria-required="true" class="form-control" id="url" name="servicesUrl" placeholder="URL"
+                               required="" th:field="*{serviceUrl}" type="url">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스
+                            URL을 작성해주세요</small>
                         <small class="field-error" th:errors="*{serviceUrl}"></small>
                     </div>
 
 
                     <div class="col-12 markdown-body">
                         <label class="sr-only" for="title">Title</label>
-                        <input type="text" class="form-control" id="title" name="title" placeholder="Title" th:field="*{title}" required="" aria-required="true">
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>간단한 서비스 설명해주세요</small>
+                        <input aria-required="true" class="form-control" id="title" name="title" placeholder="Title"
+                               required="" th:field="*{title}" type="text">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>간단한
+                            서비스 설명해주세요</small>
                         <small class="field-error" th:errors="*{title}"></small>
                     </div>
 
 
                     <div class="col-12">
                         <label class="sr-only" for="content">explain About Service ... </label>
-                        <textarea class="form-control" id="content" name="content" placeholder="explain About Service ... " th:field="*{description}" rows="10" required="" aria-required="true"></textarea>
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스를 설명해주세요</small>
+                        <textarea aria-required="true" class="form-control" id="content"
+                                  name="content" placeholder="explain About Service ... " required=""
+                                  rows="10" th:field="*{description}"></textarea>
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스를
+                            설명해주세요</small>
                         <small class="field-error" th:errors="*{description}"></small>
                     </div>
 
@@ -82,14 +95,16 @@
                         </script>
                         <div>
                             <label>Select category</label>
-                            <select name="categoryNames" th:field="*{categoryNames}" multiple="" class="label ui selection fluid dropdown" required="" aria-required="true">
+                            <select aria-required="true" class="label ui selection fluid dropdown" multiple=""
+                                    name="categoryNames" required="" th:field="*{categoryNames}">
                                 <option value="">카테고리 선택</option>
                                 <option th:each="category : ${categories}"
-                                        th:value="${category}"
-                                        th:text="${category}"></option>
+                                        th:text="${category}"
+                                        th:value="${category}"></option>
                             </select>
                         </div>
-                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스의 카테고리를 선택해주세요</small>
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스의
+                            카테고리를 선택해주세요</small>
                         <small class="field-error" th:errors="*{categoryNames}"></small>
                     </div>
 
@@ -97,8 +112,9 @@
                     <br>
 
                     <div class="form-group col-12">
-                        <button type="submit"  class="btn btn-block btn-primary py-2">수정</button>
-                        <a class="btn btn-block btn-primary py-2" th:onclick="|location.href='@{/service/{serviceId} (serviceId=${serviceId}) }'|">취소</a>
+                        <button class="btn btn-block btn-primary py-2" type="submit">수정</button>
+                        <a class="btn btn-block btn-primary py-2"
+                           th:onclick="|location.href='@{/service/{serviceId} (serviceId=${serviceId}) }'|">취소</a>
                     </div>
 
                 </div><!--//form-row-->
