bug : 서비스 요청 페이지로 접근할 방법을 버튼을 구현하여 해결(#115)

--- a/src/main/resources/templates/requested-service/articles.html
+++ b/src/main/resources/templates/requested-service/articles.html
@@ -20,6 +20,13 @@
     <section class="blog-list px-3 pr-0 p-md-5">
         <div class="container  single-col-max-width">
 
+
+            <div class="text-end">
+                <button class="btn btn-primary" th:onclick="|location.href='@{/requested-service/registration}'|">서비스
+                    요청
+                </button>
+            </div>
+
             <div class="table-responsive mt-5">
                 <table class="primary table table-striped">
                     <thead>
